.kube/eks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: komunas-ingress
  namespace: linqra
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # This group name allows multiple ingress resources to share the same Load Balancer
    alb.ingress.kubernetes.io/group.name: linqra-cluster-group
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    # Primary certificate for linqra.com and secondary for komunas.com
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:945104357909:certificate/7bf60131-6668-42c1-84d9-775ba7ec780e,arn:aws:acm:us-west-2:945104357909:certificate/[YOUR_NEW_KOMUNAS_CERT_ID]
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  rules:
    - host: komunas.linqra.com
      http:
        paths:
          - path: /r/komunas-app
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 7777
          - path: /
            pathType: Prefix
            backend:
              service:
                name: komunas-frontend-service
                port:
                  number: 80
    - host: komunas.com
      http:
        paths:
          - path: /r/komunas-app
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 7777
          - path: /
            pathType: Prefix
            backend:
              service:
                name: komunas-frontend-service
                port:
                  number: 80
    - host: www.komunas.com
      http:
        paths:
          - path: /r/komunas-app
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 7777
          - path: /
            pathType: Prefix
            backend:
              service:
                name: komunas-frontend-service
                port:
                  number: 80
